--- a/style.css
+++ b/style.css
@@ -44,6 +44,12 @@ header ul li a {
     margin: 0 60px;
 }
 
+.left_HomePage img {
+    width: 600px;
+    height: 600px;
+    margin: 0 60px;
+}
+
 .right p {
     color: white;
     font-size: 30px;
@@ -210,6 +216,13 @@ hr {
 }
 
 @media screen and (max-width: 880px) {
+
+    .body-content{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
     p {
         font-size: 16px;
     }
