--- a/style.css
+++ b/style.css
@@ -310,6 +310,10 @@ hr {
         width: 100%;
         margin-top: 50px;
     }
+
+    .footer_input input{
+        width: 100%;
+    }
 }
 
 @media screen and (max-width: 1560px) {
