--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap');
+
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    font-family: 'Roboto Mono', monospace;
     font-size: 13px;
     background-color: #333;
     color: white;
@@ -44,33 +46,28 @@ header ul li a {
     margin: 0 60px;
 }
 
+
 .left_HomePage img {
     width: 600px;
     height: 600px;
     margin: 0 60px;
 }
 
+
 .right p {
     color: white;
     font-size: 30px;
 }
 
-.button-group button {
-    padding: 10px;
-    border-radius: 5px;
-    border: 1px solid #333;
-    cursor: pointer;
-}
 
 .footer {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 20px;
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Roboto Mono', monospace;
     margin: 0;
 }
 
@@ -140,21 +137,6 @@ hr {
     color: grey;
 }
 
-.button {
-    border: none;
-    outline: 0;
-    display: inline-block;
-    padding: 8px;
-    color: white;
-    background-color: #000;
-    text-align: center;
-    cursor: pointer;
-    width: 100%;
-}
-
-.button:hover {
-    background-color: #333;
-}
 
 .footer {
     margin-top: 200px;
@@ -163,6 +145,7 @@ hr {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: black;
 }
 
 .footer p {
@@ -175,7 +158,7 @@ hr {
 
 .footer h2 {
     text-transform: uppercase;
-    margin-left: 20px;
+    margin-left: 40px;
 }
 
 .footer hr {
@@ -183,7 +166,7 @@ hr {
 }
 
 .footer_group {
-    width: 70%;
+    width: 80%;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -196,14 +179,82 @@ hr {
 
 .footer_group__links {
     text-align: center;
-    width: 20%;
+    width: 30%;
+}
+
+.footer_group__logo {
+    width: 30%;
 }
 
 .footer_group__links ul li {
     list-style: none;
     text-align: center;
     padding: 10px;
-    color: rgba(255, 255, 255, 0.507);
+    color: rgba(32, 32, 32, 0.507);
+}
+
+.footer_input {
+    width: 290px;
+    height: 45px;
+    background-color: #181515;
+    padding: 10px;
+    border-color: transparent;
+    border-radius: 20px;
+    position: relative;
+}
+
+.footer_input input {
+    background-color: transparent;
+    border-color: transparent;
+    font-family: 'Roboto Mono', monospace;
+    height: 90%;
+    font-size: 16px;
+    color: white;
+}
+
+.footer_input input:focus {
+    outline: none;
+}
+
+.btn {
+    width: 80px;
+    height: 40px;
+    background-color: #ff9900;
+    color: white;
+    font-weight: bold;
+    border-color: transparent;
+    border-radius: 20px;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+.contact_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.contact_container p {
+    line-height: 0.2;
+}
+
+.contact_group {
+    margin: 20px;
+    display: flex;
+
+}
+
+.contact_group__icon {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    cursor: pointer;
+
 }
 
 @media screen and (max-width: 650px) {
@@ -217,7 +268,7 @@ hr {
 
 @media screen and (max-width: 880px) {
 
-    .body-content{
+    .body-content {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -255,7 +306,7 @@ hr {
         text-align: center;
     }
 
-    .footer_group__links{
+    .footer_group__links {
         width: 100%;
         margin-top: 50px;
     }
@@ -270,7 +321,7 @@ hr {
         display: none;
     }
 
-    .right img{
+    .right img {
         width: 80%;
     }
 }
