--- a/style.css
+++ b/style.css
@@ -257,6 +257,51 @@ hr {
 
 }
 
+.option{
+    display: flex;
+    width: 100%;
+}
+
+.option a{
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.507);
+}
+
+.option_user{
+    width: 200px;
+    height: 120px;
+    border-radius: 5px;
+    background-color: rgb(25, 26, 26);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    font-size: 16px;
+}
+.option_user:hover{
+    cursor: pointer;
+    opacity: 0.9;
+}
+
+.option_developer{
+    width: 200px;
+    height: 120px;
+    border-radius: 5px;
+    background-color: rgb(25, 26, 26);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    font-size: 16px;
+    margin-left: 30px;
+}
+.option_developer:hover{
+    cursor: pointer;
+    opacity: 0.9;
+}
+
 @media screen and (max-width: 650px) {
     .column {
         width: 100%;
@@ -272,6 +317,8 @@ hr {
         display: flex;
         flex-direction: column;
         justify-content: center;
+        align-items: center;
+        text-align: center;
     }
 
     p {
@@ -288,6 +335,14 @@ hr {
 
     i p {
         font-size: 16px;
+    }
+
+    .option{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-self: center;
+        text-align: center;
     }
 
     .footer_group {
